Add dropout to GN module

--- a/heat/evaluate.ipynb
+++ b/heat/evaluate.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "\n",
     "    # Load model\n",
     "    checkpoint = torch.load(result_dir / \"checkpoint.pth\", map_location=\"cpu\")\n",
-    "    model = HeatModel(hp.emb_dim, hp.depth).to(device)\n",
+    "    model = HeatModel(hp.emb_dim, hp.depth, hp.dropout).to(device)\n",
     "    ema = EMA(model)\n",
     "    ema.load_state_dict(checkpoint[\"ema\"])\n",
     "\n",
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate(0.1, 0.001)"
+    "evaluate(0.0, 0.0)"
    ]
   },
   {
