--- a/kuramoto/evaluate.ipynb
+++ b/kuramoto/evaluate.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "\n",
     "    # Load model\n",
     "    checkpoint = torch.load(result_dir / \"checkpoint.pth\", map_location=\"cpu\")\n",
-    "    model = KuramotoModel(hp.emb_dim, hp.depth).to(device)\n",
+    "    model = KuramotoModel(hp.emb_dim, hp.depth, hp.dropout).to(device)\n",
     "    model.threshold = np.pi / threshold if threshold != 2 else 2.0\n",
     "    ema = EMA(model)\n",
     "    ema.load_state_dict(checkpoint[\"ema\"])\n",
@@ -61,16 +61,16 @@
     "    # Save results\n",
     "    pd.DataFrame(\n",
     "        {\"trajectories\": pred_trajectories, \"runtime\": runtimes, \"nfev\": nfevs}\n",
-    "    ).to_pickle(result_dir / \"kuramoto_train.pkl\")"
+    "    ).to_pickle(result_dir / \"kuramoto_train2.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate(2)"
+    "evaluate(6)"
    ]
   }
  ],
