--- a/kuramoto/train.ipynb
+++ b/kuramoto/train.ipynb
@@ -37,6 +37,7 @@
     "    noise=0.0,\n",
     "    emb_dim=32,\n",
     "    depth=2,\n",
+    "    dropout=0.0,\n",
     "    threshold=0.5235987756,\n",
     "    device=\"cuda:0\",\n",
     "    epochs=1540,\n",
@@ -66,25 +67,15 @@
     "\n",
     "# Model\n",
     "assert hp.threshold is not None\n",
-    "model = KuramotoModel(hp.emb_dim, hp.depth)\n",
+    "model = KuramotoModel(hp.emb_dim, hp.depth, hp.dropout)\n",
     "model.threshold = hp.threshold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start running exp_id='temp'\n",
-      "Best at epoch=0, train_mae=7.6670e-02, val_mae=5.4823e-02, rollout_mae=1.6413e-01\n",
-      "Best at epoch=1, train_mae=2.4300e-02, val_mae=1.1372e-02, rollout_mae=6.1180e-02\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Start running {exp_id=}\")\n",
     "run(exp_id, hp, model, train_dataset, val_dataset, rollout_dataset)"
