--- a/rossler/evaluate.ipynb
+++ b/rossler/evaluate.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
     "\n",
     "    # Load model\n",
     "    checkpoint = torch.load(result_dir / \"checkpoint.pth\", map_location=\"cpu\")\n",
-    "    model = RosslerModel(hp.emb_dim, hp.depth).to(device)\n",
+    "    model = RosslerModel(hp.emb_dim, hp.depth, hp.dropout).to(device)\n",
     "    ema = EMA(model)\n",
     "    ema.load_state_dict(checkpoint[\"ema\"])\n",
     "\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
