--- a/rossler/train.ipynb
+++ b/rossler/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,7 @@
     "    noise=0.001,\n",
     "    emb_dim=32,\n",
     "    depth=2,\n",
+    "    dropout=0.0,\n",
     "    threshold=None,\n",
     "    device=\"cuda:0\",\n",
     "    epochs=1540,\n",
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
     "rollout_dataset = NGSDataset(**val, window=-1)\n",
     "\n",
     "# Model\n",
-    "model = RosslerModel(hp.emb_dim, hp.depth)"
+    "model = RosslerModel(hp.emb_dim, hp.depth, hp.dropout)"
    ]
   },
   {
