Simplify training by removing single step validation

--- a/kuramoto/train.ipynb
+++ b/kuramoto/train.ipynb
@@ -62,8 +62,7 @@
     "\n",
     "# Dataset for train, validation, rollout validation\n",
     "train_dataset = NGSDataset(**train, window=1)\n",
-    "val_dataset = NGSDataset(**val, window=1)\n",
-    "rollout_dataset = NGSDataset(**val, window=-1)\n",
+    "val_dataset = NGSDataset(**val, window=-1)\n",
     "\n",
     "# Model\n",
     "assert hp.threshold is not None\n",
@@ -78,7 +77,7 @@
    "outputs": [],
    "source": [
     "print(f\"Start running {exp_id=}\")\n",
-    "run(exp_id, hp, model, train_dataset, val_dataset, rollout_dataset)"
+    "run(exp_id, hp, model, train_dataset, val_dataset)"
    ]
   }
  ],
