--- a/rossler/train.ipynb
+++ b/rossler/train.ipynb
@@ -61,8 +61,7 @@
     "\n",
     "# Dataset for train, validation, rollout validation\n",
     "train_dataset = NGSDataset(**train, window=1)\n",
-    "val_dataset = NGSDataset(**val, window=1)\n",
-    "rollout_dataset = NGSDataset(**val, window=-1)\n",
+    "val_dataset = NGSDataset(**val, window=-1)\n",
     "\n",
     "# Model\n",
     "model = RosslerModel(hp.emb_dim, hp.depth, hp.dropout)"
@@ -75,7 +74,7 @@
    "outputs": [],
    "source": [
     "print(f\"Start running {exp_id=}\")\n",
-    "run(exp_id, hp, model, train_dataset, val_dataset, rollout_dataset)"
+    "run(exp_id, hp, model, train_dataset, val_dataset)"
    ]
   },
   {
