Add learning rate scheduling and loss function configuration

--- a/heat/train.ipynb
+++ b/heat/train.ipynb
@@ -38,6 +38,13 @@
     "    emb_dim=8,\n",
     "    dropout=0.0,\n",
     "    threshold=None,\n",
+    "    lr=1e-5,\n",
+    "    lr_max=1e-3,\n",
+    "    period=200,\n",
+    "    warmup=20,\n",
+    "    lr_max_mult=0.5,\n",
+    "    period_mult=1.0,\n",
+    "    loss=\"mse\",\n",
     "    device=\"cuda:0\",\n",
     "    epochs=1540,\n",
     "    batch_size=16,\n",
@@ -59,7 +66,7 @@
     "add_missing(train, hp.missing, seed_missing)\n",
     "add_noise(train, hp.noise, seed_noise)\n",
     "\n",
-    "# Dataset for train, validation, rollout validation\n",
+    "# Dataset for train, validation\n",
     "train_dataset = NGSDataset(**train, window=1)\n",
     "val_dataset = NGSDataset(**val, window=-1)\n",
     "\n",
