--- a/kuramoto/train.ipynb
+++ b/kuramoto/train.ipynb
@@ -39,6 +39,13 @@
     "    depth=2,\n",
     "    dropout=0.0,\n",
     "    threshold=0.5235987756,\n",
+    "    lr=1e-5,\n",
+    "    lr_max=1e-3,\n",
+    "    period=200,\n",
+    "    warmup=20,\n",
+    "    lr_max_mult=0.5,\n",
+    "    period_mult=1.0,\n",
+    "    loss=\"mse\",\n",
     "    device=\"cuda:0\",\n",
     "    epochs=1540,\n",
     "    batch_size=16,\n",
@@ -60,7 +67,7 @@
     "add_missing(train, hp.missing, seed_missing)\n",
     "add_noise(train, hp.noise, seed_noise)\n",
     "\n",
-    "# Dataset for train, validation, rollout validation\n",
+    "# Dataset for train, validation\n",
     "train_dataset = NGSDataset(**train, window=1)\n",
     "val_dataset = NGSDataset(**val, window=-1)\n",
     "\n",
