--- a/rossler/train.ipynb
+++ b/rossler/train.ipynb
@@ -45,6 +45,7 @@
     "    lr_max_mult=0.5,\n",
     "    period_mult=1.0,\n",
     "    loss=\"mse\",\n",
+    "    weight_decay=0.01,\n",
     "    device=\"cuda:0\",\n",
     "    epochs=1540,\n",
     "    batch_size=16,\n",
